# sudoku-solver

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD  Bazel.md  MODULE.bazel  README.md  WORKSPACE  go.mod  lint.sh  maven_install.json  pmd.xml  requirements.in  requirements.txt  test.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
examples/: sudoku-16x16-solution.txt  sudoku-16x16.txt  sudoku-4x4-solution.txt  sudoku-4x4.txt
src/cc/: README.md  readme.md
src/cc/libdlx/: BUILD  dancing-link-node-unittest.cpp  dancing-link-node.cpp  dancing-link-node.hpp  dancing-links-matrix.cpp  dancing-links-matrix.hpp  solver-unittest.cpp  solver.cpp  solver.hpp
src/cc/libsudoku/: BUILD  placement.hpp  solution.cpp  solution.hpp  solver-unittest.cpp  solver.cpp  solver.hpp  sudoku-math.hpp  sudoku-matrix.cpp  sudoku-matrix.hpp
src/cc/main/: BUILD  main.cpp  sudoku-processor-unittest.cpp  sudoku-processor.cpp  sudoku-processor.hpp
src/go/: README.md
src/go/libdlx/: BUILD  DLXSolver.go  DLXSolver_test.go  DancingLinkHeader.go  DancingLinkNode.go  DancingLinkNode_test.go  DancingLinksMatrix.go
src/go/libsudoku/: BUILD.bazel  Placement.go  Solution.go  SudokuMath.go  SudokuMatrix.go  SudokuSize.go  SudokuSolver.go  SudokuSolver_test.go
src/go/main/: BUILD.bazel  SudokuProcessor.go  SudokuProcessor_test.go  main.go
src/java/: README.md
src/java/com/sudokusolver/libdlx/: BUILD  DLXSolver.java  DLXSolverTest.java  DancingLinkHeader.java  DancingLinkNode.java  DancingLinkNodeTest.java  DancingLinksMatrix.java  Solver.java  SolverTest.java  TestDancingLinkNode.java
src/java/com/sudokusolver/libsudoku/: BUILD  Placement.java  Solution.java  SolverTest.java  SudokuMath.java  SudokuMatrix.java  SudokuSize.java  SudokuSolver.java
src/java/com/sudokusolver/main/: BUILD  Main.java  SudokuProcessor.java  SudokuProcessorTest.java
src/py/: README.md
src/py/libdlx/: BUILD  DancingLinkHeader.py  DancingLinkNode.py  DancingLinkNode_test.py
tools/lint/: BUILD  linters.bzl
tools/pytest/: BUILD  defs.bzl
