"""
Sudoku Solver is a command-line tool for solving Sudoku puzzles.

The code presented here is a reference implementation of Algorithm X and Dancing Links (DLX) 
as originally described by Donald Knuth.For more information, check the documentation in this 
repository or the following references:

- [Wikipedia > Knuth's Algoritm X](https://en.wikipedia.org/wiki/Knuth%27s_Algorithm_X)
- [Wikipedia > Dancing Links](https://en.wikipedia.org/wiki/Dancing_Links)
- [Arxiv > Knuth's original paper on Dancing Links](https://arxiv.org/abs/cs/0011047)
"""

module(
    name = "sudoku-solver",
    version = "1.0",
)

# Dependencies for C++ code

# GTest C++ unit test framework
bazel_dep(name = "googletest", version = "1.14.0")

# Dependencies for Java code
# Note: After changing maven artifacts, regenerate maven_install.json using:
#   $ REPIN=1 bazel run @maven//:pin
bazel_dep(name = "rules_jvm_external", version = "6.1")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        #"junit:junit:4.13.2",
        "org.junit.jupiter:junit-jupiter:5.10.2",
        "org.junit.platform:junit-platform-console:1.10.2",
    ],
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven", "unpinned_maven")
